--- a/iron-comments/styles/style.css
+++ b/iron-comments/styles/style.css
@@ -1,11 +1,66 @@
+
 body {
     padding: 0;
     margin: 0;
     padding-top: 100px;
-    width: 100vw;    
-
+    width: 100vw;   
+    background: rgb(25, 33, 41); 
+    color: rgb(255, 255, 255);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 #form-container {
     margin: auto;
+    border: 3px solid rgb(67, 163, 230);
+    padding: 25px 0px 20px 10px;
+    box-sizing: border-box;
+    width: 335px;
+    border-radius: 3px;
+
+}
+
+.button {
+    color: rgb(255, 255, 255);
+    background-color: rgb(67, 163, 230);
+    border-radius: 12px;
+    border-color: rgb(67, 163, 230);
+    padding: 5px 5px;
+    font-size: 16px;
+}
+
+.fieldset1 {
+    border: none;
+}
+
+.fieldset2 {
+    border: none;
+    font-style: italic;
+    font-size: 22px;
+}
+
+.fieldset3 {
+    border: none;
+}
+
+.fieldset1 input {
+    border: 1px solid rgb(67, 163, 230);
+    border-radius: 3px;
+    width: 230px;
+    height: 20px;
+    margin: 5px 0px;
+}
+
+.fieldset1 textarea {
+    border: 1px solid rgb(67, 163, 230);
+    border-radius: 3px;
+    width: 230px;
+    height: 230px;
+    margin-top: 5px; 
+}
+
+.fieldset2 input {
+    width: 15px;
+    height: 15px;
 }
